@startuml View Profile
skinparam classAttributeIconSize 0

package "API" {
    class IdentityController {
        +GetUserInfo(): Task<IActionResult>
    }
}

package "Application" {
    class GetUserInfoQuery {
        +CurrentUserId: string
    }

    class GetUserInfoQueryHandler {
        -identityService: IIdentityService
        +Handle(request: GetUserInfoQuery): Task<ErrorOr<UserInfoVm>>
    }

    interface IIdentityService {
        +GetUserInfo(): Task<ErrorOr<UserInfoVm>>
    }
}

package "Infrastructure" {
    class IdentityService {
        -userRepository: IUserRepository
        +GetUserInfo(): Task<ErrorOr<UserInfoVm>>
    }
}

package "Domain" {
    class UserEntity {
        +Id: Guid
        +Username: string
        +Email: string
        +AvatarUrl: string?
    }
}

IdentityController ..> GetUserInfoQuery : uses
GetUserInfoQuery ..> GetUserInfoQueryHandler : handled by
GetUserInfoQueryHandler --> IIdentityService : calls
IIdentityService <|.. IdentityService : implements
IdentityService --> UserEntity : retrieves
@enduml
